Changed styling and fixed a few more issues that cropped up while refactoring

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -28,6 +28,7 @@ button.btn.btn-primary.message-btn {
 /* USER LIST */
 
 .user-table {
+    width: 80%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -45,6 +46,12 @@ button.btn.message-btn {
 .unread-msg-alert {
     background: -webkit-linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
     background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
+    box-shadow: 0 4px 15px 0 rgba(0, 0, 0, 0.47);
+}
+
+tr {
+    vertical-align: middle;
+    text-align: center;
 }
 
 /* LOGIN */
@@ -116,11 +123,11 @@ button.btn.btn-success {
 /* MESSAGES PAGE */
 
 form.form-message {
-    background: #e6e6e6;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 15px;
     margin-left: 20%;
     margin-right: 20%;
+    background-color: rgba(0,0,0,0.4);
 }
 
 .message-page{
@@ -131,8 +138,23 @@ form.form-message {
     background: linear-gradient(to right, #91EAE4, #86A8E7, #7F7FD5);
 }
 
+.msg-type {
+    background-color: rgba(0,0,0,0.3);
+    border:0;
+    border-radius: 15px;
+    color:white;
+    height: 60px;
+    overflow-y: auto;
+}
+
+.msg-type:focus{
+    box-shadow:none;
+    outline:0px;
+}
+
 .msg-head {
     text-align: center;
+    color: white;
 }
 
 /* MESSAGES */
@@ -175,13 +197,16 @@ form.form-message {
     margin-top: -5px;
     margin-left: 1%;
     margin-right: 1%;
+    color: rgba(255,255,255,0.5);
 }
 
 .user-name {
     margin-bottom: 0px;
     margin-left: 1%;
     margin-right: 1%;
+    color: rgba(255, 255, 255, 0.71);
 }
+
 
 /* SEND MESSAGE BUTTON */
 
@@ -224,7 +249,7 @@ button.message-send:hover {
 }
 
 .btn-hover:focus {
-    outline: none;
+    outline: black;
 }
 
 /* UNREAD MESSAGE EMAIL */
